package com.example.jhapcham.order.domain;


import com.example.jhapcham.order.application.*;
import com.example.jhapcham.order.domain.*;
import com.example.jhapcham.order.dto.*;
import com.example.jhapcham.order.persistence.*;
import com.example.jhapcham.delivery.domain.Shipment;
import com.example.jhapcham.payment.domain.Payment;
import com.example.jhapcham.user.domain.User;
import com.fasterxml.jackson.annotation.JsonIgnore;
import jakarta.persistence.*;
import lombok.*;

import java.math.BigDecimal;
import java.time.LocalDateTime;
import java.util.ArrayList;
import java.util.HashSet;
import java.util.List;
import java.util.Set;

@Entity
@Table(
        name = "orders",
        indexes = {
                @Index(name = "idx_orders_user_created",           columnList = "user_id,created_at"),
                @Index(name = "idx_orders_status_created",         columnList = "status,created_at"),
                @Index(name = "idx_orders_payment_status_created", columnList = "payment_status,created_at"),
                @Index(name = "idx_orders_email_created",          columnList = "customer_email,created_at"),
                @Index(name = "idx_orders_custom_order_id",        columnList = "custom_order_id")
        },
        uniqueConstraints = {
                @UniqueConstraint(name = "uk_orders_user_idempotency",  columnNames = {"user_id", "idempotency_key"}),
                @UniqueConstraint(name = "uk_orders_email_idempotency", columnNames = {"customer_email", "idempotency_key"}),
                @UniqueConstraint(name = "uk_orders_custom_order_id",   columnNames = {"custom_order_id"})
        }
)
@Getter
@Setter
@NoArgsConstructor
@AllArgsConstructor
@Builder
// Trivial change for re-compilation
public class Order {

    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    private Long id;

    /**
     * Human-readable order reference in the format JHC-YYYYMMDD-XXXX.
     * Generated by {@link OrderIdGenerator} at order creation time.
     * Unique per order, indexed for fast lookup.
     */
    @Column(name = "custom_order_id", length = 20, unique = true)
    private String customOrderId;

    // null for guest checkout
    @ManyToOne
    @JoinColumn(name = "user_id")
    private User user;

    @Column(nullable = false)
    private String customerName;

    @Column(nullable = false)
    private String customerPhone;

    private String customerAlternativePhone; // NEW

    @Column(columnDefinition = "TEXT")
    private String deliveryTimePreference; // NEW

    @Column(columnDefinition = "TEXT")
    private String orderNote; // NEW

    @Column(nullable = false)
    private String customerEmail;

    @Column(nullable = false)
    private String shippingAddress;

    // INSIDE or OUTSIDE
    @Column(nullable = false)
    private String shippingLocation;

    @Enumerated(EnumType.STRING)
    @Column(nullable = false)
    private PaymentMethod paymentMethod;

    @Enumerated(EnumType.STRING)
    @Column(nullable = false, length = 255)
    @Builder.Default
    private PaymentStatus paymentStatus = PaymentStatus.PENDING;


    private String paymentReference;

    @OneToOne(mappedBy = "order", fetch = FetchType.LAZY)
    @JsonIgnore
    private Payment payment;

    @Enumerated(EnumType.STRING)
    @Column(nullable = false, length = 255)
    @Builder.Default
    private OrderStatus status = OrderStatus.PENDING;


    @Column(nullable = false)
    private BigDecimal itemsTotal;

    @Column(nullable = false)
    private BigDecimal shippingFee;

    @Column(nullable = true)
    private BigDecimal vatAmount;

    @Column(nullable = false)
    private BigDecimal discountTotal;

    @Column(nullable = false, precision = 38, scale = 2, columnDefinition = "numeric(38,2) DEFAULT 0")
    @Builder.Default
    private BigDecimal loyaltyDiscountAmount = BigDecimal.ZERO;

    @Column(nullable = false, columnDefinition = "bigint DEFAULT 0")
    @Builder.Default
    private Long loyaltyPointsRedeemed = 0L;

    @Column(nullable = false)
    private BigDecimal grandTotal;

    @Column(nullable = false)
    private LocalDateTime createdAt;

    @Column(length = 100)
    private String appliedCoupon;

    @Column(length = 120)
    private String idempotencyKey;

    private LocalDateTime paymentInitiatedAt;

    private LocalDateTime paidAt;

    private LocalDateTime deliveredAt;

    @OneToMany(mappedBy = "order", cascade = CascadeType.ALL, orphanRemoval = true)
    @Builder.Default
    private List<OrderItem> items = new ArrayList<>();

    @OneToOne(mappedBy = "order", fetch = FetchType.LAZY)
    private Shipment shipment;

    public void addItem(OrderItem item) {
        if (items == null) {
            items = new ArrayList<>();
        }
        items.add(item);
        item.setOrder(this);
    }

    // assign branch
    @Enumerated(EnumType.STRING)
    private DeliveryBranch assignedBranch;

    @Column(nullable = false)
    private BigDecimal sellerGrossAmount;

    @Column(nullable = false)
    private BigDecimal sellerShippingCharge;

    @Column(nullable = false)
    private BigDecimal sellerNetAmount;

    @Column(columnDefinition = "numeric(38,2) DEFAULT 0")
    @Builder.Default
    private BigDecimal marketplaceCommission = BigDecimal.ZERO;

    @Column(nullable = false, precision = 38, scale = 2, columnDefinition = "numeric(38,2) DEFAULT 0")
    @Builder.Default
    private BigDecimal sellerPromoDiscountAmount = BigDecimal.ZERO;

    @Column(nullable = false, precision = 38, scale = 2, columnDefinition = "numeric(38,2) DEFAULT 0")
    @Builder.Default
    private BigDecimal platformSponsoredDiscountAmount = BigDecimal.ZERO;

    @Column(nullable = false, precision = 38, scale = 2, columnDefinition = "numeric(38,2) DEFAULT 0")
    @Builder.Default
    private BigDecimal inputVatAmount = BigDecimal.ZERO;

    @Column(nullable = false, precision = 38, scale = 2, columnDefinition = "numeric(38,2) DEFAULT 0")
    @Builder.Default
    private BigDecimal outputVatAmount = BigDecimal.ZERO;

    @Column(nullable = false, precision = 38, scale = 2, columnDefinition = "numeric(38,2) DEFAULT 0")
    @Builder.Default
    private BigDecimal vatPayableAmount = BigDecimal.ZERO;

    @Column(nullable = false, precision = 38, scale = 2, columnDefinition = "numeric(38,2) DEFAULT 0")
    @Builder.Default
    private BigDecimal grossProfitAmount = BigDecimal.ZERO;

    @Column(nullable = false, precision = 38, scale = 2, columnDefinition = "numeric(38,2) DEFAULT 0")
    @Builder.Default
    private BigDecimal netProfitAmount = BigDecimal.ZERO;

    @Column(nullable = false, precision = 38, scale = 2, columnDefinition = "numeric(38,2) DEFAULT 0")
    @Builder.Default
    private BigDecimal finalSellerEarnings = BigDecimal.ZERO;

    @Enumerated(EnumType.STRING)
    private DeliveryBranch deliveredBranch;

    @Column(nullable = false, columnDefinition = "boolean default false")
    @Builder.Default
    private boolean sellerAccounted = false;

    @Enumerated(EnumType.STRING)
    @Column(nullable = false, length = 255)
    @Builder.Default
    private CommissionStatus commissionStatus = CommissionStatus.PENDING;


    // Tracks whether stock was deducted for this order.
    // Prevents double-restoration if cancel is called multiple times.
    @Column(nullable = false, columnDefinition = "boolean default false")
    @Builder.Default
    private boolean stockDeducted = false;

    // Delivery Confirmation OTP
    private String deliveryOtp;
    private LocalDateTime deliveryOtpExpiry;

    @Builder.Default
    private Integer deliveryOtpResendCount = 0;

    // Commission Penalty Tracking
    private LocalDateTime commissionDueDate;
    
    @Column(nullable = false, precision = 38, scale = 2, columnDefinition = "numeric(38,2) DEFAULT 0")
    @Builder.Default
    private BigDecimal commissionFineAmount = BigDecimal.ZERO;

    @Column(nullable = false, columnDefinition = "boolean DEFAULT false")
    @Builder.Default
    private boolean commissionReminderSent = false;

    private LocalDateTime lastFineCalculationDate;
    
    private String commissionPaymentReference;
    private LocalDateTime commissionPaidAt;

    // Set to true when a prepaid order is returned. Signals payment service to refund customer.
    @Column(nullable = false, columnDefinition = "boolean DEFAULT false")
    @Builder.Default
    private boolean refundPending = false;

}
